# wordstofont

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_hello.py
src/: hello_world.py
