[project]
name = "wordstofont"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "fonttools>=4.56.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "svgpathtools>=1.6.1",
    "svgwrite>=1.4.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "uvicorn>=0.34.0",
    "wandb>=0.19.7",
]
